--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,35 @@
+backcall==0.2.0
+certifi==2020.12.5
+chardet==4.0.0
 click==7.1.2
+decorator==4.4.2
+flake8==3.8.4
 Flask==1.1.2
+idna==2.10
+ipython==7.19.0
+ipython-genutils==0.2.0
 itsdangerous==1.1.0
+jedi==0.18.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+mccabe==0.6.1
 numpy==1.19.1
 pandas==1.1.0
+parso==0.8.1
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.14
+ptyprocess==0.7.0
+pycodestyle==2.6.0
+pyflakes==2.2.0
+Pygments==2.7.4
 python-dateutil==2.8.1
 pytz==2020.1
+requests==2.25.1
 six==1.15.0
 SQLAlchemy==1.3.18
+traitlets==5.0.5
+urllib3==1.26.3
+wcwidth==0.2.5
 Werkzeug==1.0.1
 XlsxWriter==1.3.6
